--- a/index.Rmd
+++ b/index.Rmd
@@ -43,11 +43,11 @@ PLoS medicine]()
    * [Hung, Fithian (2020) Statistical methods for replicability assessment. The Annals of Applied Statistics. 14: 1063-1087](https://arxiv.org/pdf/1903.08747.pdf)
    
 * L04 (Giovedì 25 Marzo 10:30-13:30) 3h
-   * **What can go wrong in high dimensions?**
-   * **Global tests in high dimensions**
-   * [Wainwright (2019) High-Dimensional Statistics: A Non-Asymptotic Viewpoint
-Cambridge University Press. Sections 1.1.1, 1.2.1, 1.3.1]()
-   * [Donoho, Jin (2015) Higher Criticism for Large-Scale Inference, Especially for Rare and Weak Effects, Statistical Science, 30:1–25](http://www.stat.cmu.edu/~jiashun/Research/Selected/HC-Review.pdf)
+   * ~~**What can go wrong in high dimensions?**~~
+   * ~~**Global tests in high dimensions**~~
+   * ~~[Wainwright (2019) High-Dimensional Statistics: A Non-Asymptotic Viewpoint
+Cambridge University Press. Sections 1.1.1, 1.2.1, 1.3.1]()~~
+   * ~~[Donoho, Jin (2015) Higher Criticism for Large-Scale Inference, Especially for Rare and Weak Effects, Statistical Science, 30:1–25](http://www.stat.cmu.edu/~jiashun/Research/Selected/HC-Review.pdf)~~
    
 * L05 (Lunedì 29 Marzo 12:30-15:30) 3h
    * **Multiple testing: FWER controlling procedures**
